spec/e2e/call/num.lit
123(); # error: [line 1] Can only call functions.
